--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "CodePress\\CodePosts\\": "packages/codeposts/src/CodePosts/"
         }
     },
     "autoload-dev": {
