--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "codeedu/laravel-tinymce": "dev-master",
         "cviebrock/eloquent-sluggable": "^4.5",
+        "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6",
-        "schenato/code-tag": "^0.0.1",
         "schenato/code-category": "^0.0.1",
-        "codeedu/laravel-tinymce": "dev-master"
+        "schenato/code-tag": "^0.0.1"
     },
     "repositories": [
         {
